# LearnOpenGL

./: .clang-format  .gitattributes  CMakeLists.txt  README.md
Dependency/glad/: CMakeLists.txt
Dependency/glad/include/glad/: glad.h
Dependency/glad/src/: glad.c
Dependency/stb/: CMakeLists.txt
Dependency/stb/include/stb/: stb_image.h
Source/Common/: Camera.cpp  Camera.hpp  Image.cpp  Image.hpp  Input.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Type.hpp  Window.cpp  Window.hpp
Source/Example/10_Camera/: Fragment.glsl  Main.cpp  Vertex.glsl
Source/Example/11_Colors/: Light.frag.glsl  Light.vert.glsl  Main.cpp  Object.frag.glsl
Source/Example/12_BasicLighting/: Main.cpp
Source/Example/1_HelloWorld/: Main.cpp
Source/Example/2_HelloWindow/: Main.cpp
Source/Example/3_Clear/: Main.cpp
Source/Example/4_HelloTriangle/: Main.cpp
Source/Example/5_HelloQuad/: Main.cpp
Source/Example/6_Shaders/: Main.cpp
Source/Example/7_Textures/: Fragment.glsl  Main.cpp  Vertex.glsl
Source/Example/8_Transformations/: Fragment.glsl  Main.cpp  Vertex.glsl
Source/Example/9_CoordinateSystems/: Main.cpp
example/2_hello_window/: main.odin
example/3_clear/: main.odin
example/4_hello_triangle/: main.odin
example/5_hello_quad/: main.odin
example/6_shaders/: frag.glsl  main.odin  vert.glsl
example/7_textures/: frag.glsl  main.odin  vert.glsl
renderer/: gl.odin  image.odin  shader.odin  window.odin
